Added UI for adding/removing entities